update: index, changed language of english term in a paragraph

--- a/Frontend/tp-accessibilite/index.html
+++ b/Frontend/tp-accessibilite/index.html
@@ -100,7 +100,7 @@
             <h2>Pourquoi <span class="underline">A11y</span> et pas A11é ?</h2>
             <p><span class="underline">A11É</span> est une abréviation pour accessibilité où 11 représente le nombre de lettres entre le a et le é du mot accessibilité. Cette même abbréviation dans sa version anglaise est plus jolie à l'oreille : A11Y</p>
             <h2>Quelle est l'origine du mot HANDICAP ?</h2>
-            <p>Le mot <span class="italic">handicap</span> trouve son origine dans l'anglais médiéval. Il est dérivé de l'expression <span class="bolded">hand in cap</span>, qui signifie <span class="italic">main dans le chapeau</span>. À l'époque, cette expression était utilisée dans les jeux de hasard pour indiquer qu'un joueur était désavantagé ou handicapé par rapport aux autres joueurs. Au fil du temps, le terme a été adopté dans d'autres contextes pour décrire une situation où une personne est désavantagée ou limitée dans ses capacités physiques, mentales ou sociales.</p>
+            <p>Le mot <span class="italic">handicap</span> trouve son origine dans l'anglais médiéval. Il est dérivé de l'expression <span lang="en" class="bolded">hand in cap</span>, qui signifie <span class="italic">main dans le chapeau</span>. À l'époque, cette expression était utilisée dans les jeux de hasard pour indiquer qu'un joueur était désavantagé ou handicapé par rapport aux autres joueurs. Au fil du temps, le terme a été adopté dans d'autres contextes pour décrire une situation où une personne est désavantagée ou limitée dans ses capacités physiques, mentales ou sociales.</p>
         </section>
         <section id="principles" class="principles">
             <h2>Le WCAG et les 4 principes A11y</h2>
