--- a/Frontend/tp-accessibilite/pages/handicaps.html
+++ b/Frontend/tp-accessibilite/pages/handicaps.html
@@ -13,7 +13,7 @@
             <a class="white-links" href="#content">Aller au contenu</a>
             <img src="../assets/a11yNow.png" alt="Logo du site HandiA11y spécialisé dans l'accessibilité web">
         </div>
-        <nav role="nav">
+        <nav role="navigation">
             <ul class="navbar">
                 <li><a class="white-links" href="../index.html">Accueil</a></li>
                 <li><a class="white-links" href="./ally.html">A11y</a></li>
@@ -73,9 +73,9 @@
                         Justification
                     </legend>
                     <div class="dialog-inputs">
-                        <input type="radio" id="default-justify" checked name="justify">
+                        <input class="justify" type="radio" id="default-justify" checked name="justify">
                         <label for="default-justify">Défaut</label>
-                        <input type="radio" id="remove-justify" name="justify">
+                        <input class="justify" type="radio" id="remove-justify" name="justify">
                         <label for="remove-justify">Supprimer</label>
                     </div>
                 </fieldset>
