--- a/Frontend/tp-accessibilite/pages/form.html
+++ b/Frontend/tp-accessibilite/pages/form.html
@@ -73,9 +73,9 @@
                         Justification
                     </legend>
                     <div class="dialog-inputs">
-                        <input type="radio" id="default-justify" checked name="justify">
+                        <input class="justify" type="radio" id="default-justify" checked name="justify">
                         <label for="default-justify">Défaut</label>
-                        <input type="radio" id="remove-justify" name="justify">
+                        <input class="justify" type="radio" id="remove-justify" name="justify">
                         <label for="remove-justify">Supprimer</label>
                     </div>
                 </fieldset>
