feat exercices JS employes

--- a/Frontend/exercicesJS/exercices/exercice2/index.html
+++ b/Frontend/exercicesJS/exercices/exercice2/index.html
@@ -8,11 +8,11 @@
 <body>
     <form id="form">
         <div>
-            <input id="date" type="text">
+            <input id="date" type="text" name="txtdate">
             <button id="btn-date" type="button" class="btn btn-date">Date</button>
         </div>
         <div>
-            <input id="time" type="text">
+            <input id="time" type="text" name="txtheure">
             <button id="btn-time" type="button" class="btn btn-time">Heure</button>
         </div>
 
