--- a/Frontend/tp-employes/index.html
+++ b/Frontend/tp-employes/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="Fr-fr">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,7 +17,7 @@
                 <th>EID</th>
                 <th>Full Name</th>
                 <th>Email</th>
-                <th id="salary">Monthly salary</th>
+                <th>Monthly salary <button id="salary">Sort</button></th>
                 <th>Year of birth</th>
                 <th>Actions</th>
             </tr>
