update exo employe JS

--- a/Frontend/tp-employes/index.html
+++ b/Frontend/tp-employes/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h1>Employees</h1>
-        <p>This is the current list of employees</p>
+        <p id="paragraph">This is the current list of employees</p>
     </header>
     <main>
         <table id="emp-table">
