feat: tp course, updates on employes and boissons JS

--- a/Frontend/tp-boissons/www/index.html
+++ b/Frontend/tp-boissons/www/index.html
@@ -15,7 +15,7 @@
             <h2>Boissons</h2>
         </section>
         <aside class="selection">
-            <h2>Votre sélection</h2>
+            <h2>Votre sélection <span id="question-mark"> ?</span></h2>
         </aside>
     </main>
 </body>
