update: exercice square optimisation

--- a/Frontend/test-css/index.html
+++ b/Frontend/test-css/index.html
@@ -10,39 +10,39 @@
     <div class="main">
         <div class="main-square">
             <div class="flex">
-                <div class="white one-height two-width"></div>
-                <div class="white one-height one-width"></div>
-                <div class="white one-height two-width"></div>
+                <div class="second one-height two-width"></div>
+                <div class="second one-height one-width"></div>
+                <div class="second one-height two-width"></div>
             </div>
             <div class="flex">
-                <div class="white one-height one-width"></div>
-                <div class="red one-height two-width"></div>
-                <div class="red one-height two-width"></div>
-                <div class="white one-height one-width"></div>
+                <div class="second one-height one-width"></div>
+                <div class="third one-height two-width"></div>
+                <div class="third one-height two-width"></div>
+                <div class="second one-height one-width"></div>
             </div>
             <div class="flex center">
-                <div class="red three-height seven-width">
-                    <div class="absolute white one-height one-width"></div>
+                <div class="third three-height seven-width">
+                    <div class="above second one-height one-width"></div>
                 </div>
             </div>
             <div class="flex">
-                <div class="white one-height one-width"></div>
-                <div class="red one-height five-width"></div>
-                <div class="white one-height one-width"></div>
+                <div class="second one-height one-width"></div>
+                <div class="third one-height five-width"></div>
+                <div class="second one-height one-width"></div>
             </div>
             <div class="flex">
-                <div class="white one-height two-width"></div>
-                <div class="red one-height three-width"></div>
-                <div class="white one-height two-width"></div>
+                <div class="second one-height two-width"></div>
+                <div class="third one-height three-width"></div>
+                <div class="second one-height two-width"></div>
             </div>
             <div class="flex">
-                <div class="white one-height three-width"></div>
-                <div class="red one-height one-width"></div>
-                <div class="white one-height three-width"></div>
+                <div class="second one-height three-width"></div>
+                <div class="third one-height one-width"></div>
+                <div class="second one-height three-width"></div>
             </div>
             <div class="flex">
-                <div class="white one-height four-width"></div>
-                <div class="white one-height four-width"></div>
+                <div class="second one-height four-width"></div>
+                <div class="second one-height four-width"></div>
             </div>
         </div>
     </div>
