update tp vuejs, still WIP for the dynamic forms

--- a/Frontend/tp-maquette/index.html
+++ b/Frontend/tp-maquette/index.html
@@ -9,15 +9,15 @@
 <body>
     <header>
         <div class="header-first-part">
-            <h1>H<span class="other-color">eader</span></h1>
+            <h1>Header</h1>
         </div>
-        <nav>
-            <ul>
+        <nav role="navigation">
+            <menu>
                 <li class="nav-element"><a class="nav-link" href="#">Accueil</a></li>
                 <li class="nav-element"><a class="nav-link" href="#">Page1</a></li>
                 <li class="nav-element"><a class="nav-link" href="#">Page2</a></li>
                 <li class="nav-element"><a class="nav-link" href="#">Page3</a></li>
-            </ul>
+            </menu>
         </nav>
     </header>
     <main>
@@ -28,25 +28,27 @@
             <h1>Section</h1>
         </section>
         <aside class="aside-right">
-            <h1>Aside</h1>
+            <h1>Aside2</h1>
         </aside>
     </main>
     <footer>
-        <ul>
-            <li><a class="footer-link" href="#">Lien</a></li>
-            <li><a class="footer-link" href="#">Lien</a></li>
-            <li><a class="footer-link" href="#">Lien</a></li>
-        </ul>
-        <ul>
-            <li><a class="footer-link" href="#">Lien</a></li>
-            <li><a class="footer-link" href="#">Lien</a></li>
-            <li><a class="footer-link" href="#">Lien</a></li>
-        </ul>
-        <ul>
-            <li><a class="footer-link" href="#">Lien</a></li>
-            <li><a class="footer-link" href="#">Lien</a></li>
-            <li><a class="footer-link" href="#">Lien</a></li>
-        </ul>
+        <nav class="footer-nav">
+            <ul class="footer-ul">
+                <li><a class="footer-link" href="#">Lien</a></li>
+                <li><a class="footer-link" href="#">Lien</a></li>
+                <li><a class="footer-link" href="#">Lien</a></li>
+            </ul>
+            <ul class="footer-ul">
+                <li><a class="footer-link" href="#">Lien</a></li>
+                <li><a class="footer-link" href="#">Lien</a></li>
+                <li><a class="footer-link" href="#">Lien</a></li>
+            </ul>
+            <ul class="footer-ul">
+                <li><a class="footer-link" href="#">Lien</a></li>
+                <li><a class="footer-link" href="#">Lien</a></li>
+                <li><a class="footer-link" href="#">Lien</a></li>
+            </ul>
+        </nav>
     </footer>
 </body>
 </html>
